{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 140,
  "lineage": "054383f0-818d-c14f-dd99-bebbad90c38c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:663266910550:instance/i-0db4a3906373cf90b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db4a3906373cf90b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0714324afa671a9ef",
            "private_dns": "ip-10-10-0-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.216",
            "public_ip": "3.80.177.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0693a70bde86a743e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010dcbeffae4e4366",
            "tags": {
              "Name": "apache-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "apache-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cc6e60f9e296c4f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": "jumpserver",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:663266910550:instance/i-070668c8f0d9dd732",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070668c8f0d9dd732",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01b77611b7a27391c",
            "private_dns": "ip-10-10-0-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.199",
            "public_ip": "54.172.181.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a4cd35d318155708",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010dcbeffae4e4366",
            "tags": {
              "Name": "jumpserver-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "jumpserver-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cc6e60f9e296c4f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        },
        {
          "index_key": "mysql",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b21ccaeff8cd686",
            "arn": "arn:aws:ec2:us-east-1:663266910550:instance/i-0fc76743a69e496c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fc76743a69e496c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04cb58a7bd858880c",
            "private_dns": "ip-10-10-0-179.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.179",
            "public_ip": "3.87.169.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-025a47f3dfe7247a5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010dcbeffae4e4366",
            "tags": {
              "Name": "mysql-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "mysql-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cc6e60f9e296c4f"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia",
            "data.aws_key_pair.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663266910550:internet-gateway/igw-0f90611232b493b17",
            "id": "igw-0f90611232b493b17",
            "owner_id": "663266910550",
            "tags": {
              "Name": "igw_lab_terrom-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "igw_lab_terrom-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-0e5a6bafaf6cc7cc9"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663266910550:route-table/rtb-0c9df3f57fd10f2bb",
            "id": "rtb-0c9df3f57fd10f2bb",
            "owner_id": "663266910550",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f90611232b493b17",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_crt-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "public_crt-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5a6bafaf6cc7cc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f38e22bcbe2caba3",
            "route_table_id": "rtb-0c9df3f57fd10f2bb",
            "subnet_id": "subnet-010dcbeffae4e4366"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_crt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663266910550:security-group/sg-03cc6e60f9e296c4f",
            "description": "Allow SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cc6e60f9e296c4f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg public instance",
            "name_prefix": "",
            "owner_id": "663266910550",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg public instance-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "sg public instance-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5a6bafaf6cc7cc9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663266910550:subnet/subnet-0149681087c11dd1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0149681087c11dd1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663266910550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LAB_Private_Subnet-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "LAB_Private_Subnet-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-0e5a6bafaf6cc7cc9"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663266910550:subnet/subnet-010dcbeffae4e4366",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010dcbeffae4e4366",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663266910550",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "LAB_Public_Subnet-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "LAB_Public_Subnet-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            },
            "vpc_id": "vpc-0e5a6bafaf6cc7cc9"
          },
          "dependencies": [
            "aws_vpc.vpc_virginia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginia",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663266910550:vpc/vpc-0e5a6bafaf6cc7cc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02edce2528b27980a",
            "default_route_table_id": "rtb-09aceb89b8e9784b0",
            "default_security_group_id": "sg-077531199d249336f",
            "dhcp_options_id": "dopt-0bf88cfff1dbe20fe",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5a6bafaf6cc7cc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09aceb89b8e9784b0",
            "owner_id": "663266910550",
            "tags": {
              "Name": "vpc_virginia-Terraform_Cerberus-dev-us-east-1"
            },
            "tags_all": {
              "Iac": "terraform",
              "Name": "vpc_virginia-Terraform_Cerberus-dev-us-east-1",
              "application_code": "cld10010001",
              "cloud": "AWS",
              "env": "dev",
              "owner": "alescude",
              "project_name": "Terraform_Cerberus",
              "region": "us-east-1"
            }
          }
        }
      ]
    }
  ]
}